# supnum-bruteforce

./: Cargo.toml  README.md
src/: args.rs  header.rs  main.rs
