[package]
name = "supnum-bruteforce"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
reqwest = { version = "0.11", features = ["json"] }
suppaftp = { version = "5.0", features = ["async"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
base64 = "0.21"
native-tls = "0.2"
tokio-native-tls = "0.3"
rand = "0.8"
mongodb = "2.0"
sqlx = { version = "0.7", features = ["mysql", "postgres", "runtime-tokio-native-tls"] }
ldap3 = "0.11"
